# PlantReprRecog

./: CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.E1BEFC1D69B45CCD.idx
PRR/: CMakeLists.txt  CMakeLists.txt.iDRJHp  clickablecombobox.h  imagesettings.cpp  imagesettings.h  main.cpp  prrwin.cpp  prrwin.h  prrwin.ui  qtutility.hpp  requires.h  terminal.h
img/: rawPlant.jpg:Zone.Identifier
interaction/: CMakeLists.txt  interaction_zh_CN.ts  main.cpp  prrwin.cpp  prrwin.h  prrwin.ui
src/: calibrate.cpp  communicate.hpp  imgTest.cpp  interaction.cpp  main.cpp  opencv.h  phm.hpp  rtt.cpp  stdc++.h  threshold.cpp  utility.hpp
src/cv/: calibrate.cpp  cvmatandqimage.hpp  imgTest.cpp  phm.hpp  threshold.cpp
src/hardware/: communicate.hpp  interaction.cpp
src/qt/: main.cpp  qtutility.hpp  requires.h
src/qt/prr/: camera.hpp  process.hpp  prrwin.cpp  prrwin.h  prrwin.ui  ui.hpp
src/qt/widget/: clickablecombobox.cpp  terminal.cpp  terminal.h
src/util/: opencv.h  stdc++.h
test/: a.out  test.cpp
